# smallpp

./: .gitignore  CMakeLists.txt  README.md  smallpp.sln
res/: test.pb.h  test.proto
src/: CMakeLists.txt
src/example/: example.vcxproj  example.vcxproj.filters  generated.h  main.cpp  test_message.h
src/generator/: generator.vcxproj  generator.vcxproj.filters  io.h  main.cpp  parser.cpp  parser.h  types.h
src/generator/field_types/: base_field_type.h
src/generator/generator/: generator.cpp  generator.h
src/generator/parser/: parser.cpp  parser.h
src/generator/platform/: io.h
src/generator/shared/: types.h
src/smallpp/: smallpp.h  smallpp.vcxitems
